# boid

./: .copier-answers.yml  README.md  pyproject.toml
notebooks/: boid_notebook.ipynb
src/boid/: _boid.py
