[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
authors = [
    { name = "Miquel Sendra", email = "miquel.sendra@univ-amu.fr"},
]
maintainers = [
    {name = "Miquel Sendra", email = "miquel.sendra@univ-amu.fr"}
]
name = "boid"
description = "A repository to analize boid formation and acceleracion"
version = "0.1.0"
license = { file = "LICENSE" }
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy", 
    "jupyter", 
    "matplotlib"
]

[project.urls]
"Bug Tracker" = "https://github.com/MiquelSendra/boid/issues"
Documentation = "https://github.com/MiquelSendra/boid#README.md"
"Source Code" = "https://github.com/MiquelSendra/boid"
"User Support" = "https://github.com/MiquelSendra/boid/issues"


[project.scripts]
"boid" = "boid:run_app"

[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "ruff",
    "bumpver",
    "pytest",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/_boid/__init__.py" = [
    '__version__ = "{version}"',
]
